test/library/standard/Map/testGetValueOwned.good
testGetValueOwned.chpl:7: In function 'test':
testGetValueOwned.chpl:13: error: cannot call `getValue()` for non-copyable map value type: owned C
